--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.12",
