--- a/package.json
+++ b/package.json
@@ -11,19 +11,45 @@
   "author": "Benny Makes",
   "license": "ISC",
   "dependencies": {
+    "process": "^0.11.10",
     "vue": "^2.6.12",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.1.3",
+    "babel-jest": "^26.6.3",
+    "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^5.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
+    "jest-serializer-vue": "^2.0.2",
+    "normalize.css": "^8.0.1",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-serializer-vue"
+    ]
   }
 }
