--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-app",
+  "name": "aviator",
   "version": "1.0.0",
-  "description": "Template Application",
+  "description": "Flight Scheduling Systemw",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
